# compass

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  driver.py
data/: download_data.sh
script/: config.sh  gcp_download.py  gcp_upload.py  gcs_download.py  gcs_upload.py
script/artifact/: latency_breakdown.py  latency_mrr.py  ssh_utils.py  task.py  test.py
script/artifact/accuracy/: accuracy_cal.py
script/artifact/gcp/: gcp_launch.py  gcp_utils.py  utils.py
script/artifact/graph/: ablation_study.py  accuracy_cal.py  communication.py  latency_breakdown.py  latency_mrr.py  memory_consumption.py
script/artifact/throughput/: run_server.sh
script/gcp/: gcp_launch.py  gcp_utils.py
src/: CMakeLists.txt  README.md  block.cpp  block.h  cluster.cpp  graph.h  node.cpp  node.h
src/faiss/: CMakeLists.txt  Index.h  IndexHNSW.cpp  IndexHNSW.h  MetricType.h  index_io.cpp  index_io.h
src/faiss/impl/: AuxIndexStructures.cpp  AuxIndexStructures.h  DistanceComputer.h  FaissAssert.h  HNSW.cpp  HNSW.h  ProductQuantizer.cpp  ProductQuantizer.h  io.cpp  io.h  oblivious_hnsw.cpp
src/faiss/storage/: storage.cpp  storage.h
src/faiss/utils/: Heap.cpp  Heap.h  io.cpp  io.h  random.cpp  random.h  sorting.h
src/oram/: CMakeLists.txt  OramLeak.cpp  OramReadPathEviction.cpp  OramRing.cpp  OramRing.h  RemoteRing.cpp  RemoteRing.h  RemoteServerRing.cpp  RemoteServerRing.h  RemoteServerStorage.cpp
tests/: test_compass_accuracy.cpp  test_compass_accuracy_ablation.cpp  test_compass_ring.cpp  test_compass_ring_tp.cpp
tests/baseline/: baseline_config.json  baseline_utils.cpp  baseline_utils.h  obi_accuracy.cpp  obi_init.cpp  test_obi copy.cpp  test_obi.cpp
tests/baseline/cluster/: cluster_search.cpp  cluster_search.h
tests/config/: config_ring.json  config_ring_2.json
tests/eval/: compass_init.cpp  test_init_cache_ring.cpp  test_init_dataset_ring.cpp
tests/utils/: config_parser.cpp  config_parser.h
